Change icon path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="shortcut icon" href="/static/img/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="static/img/icon.png" type="image/x-icon">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -16,7 +16,7 @@
 
 <body>
     <div class="jumbotron">
-        <img src="/static/img/icon.png" class="float-left">
+        <img src="static/img/icon.png" class="float-left">
         <div class="d-flex">
             <span class="justify-content-right spinner-grow spinner-grow-sm text-danger mr-2" id="test-active" role="status"
                 aria-hidden="true" style="display: none;"></span>
