Added in-development alert

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="alert alert-warning alert-dismissible fade show rounded-0 m-0" role="alert">
+        This website is currently under development and some features may not be working.
+        <a href="https://github.com/lukeathedev/typing_test/issues" target="_blank">Improve this</a>!
+        <button type="button" class="close py-2" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="jumbotron rounded-0">
         <img src="static/img/icon.png" class="float-left">
         <div class="d-flex">
             <span class="justify-content-right spinner-grow spinner-grow-sm text-danger mr-2" id="test-active" role="status"
