--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+
+    <div class="alert alert-success alert-dismissible fade show rounded-0 m-0" id="finished-alert" role="alert" style="display: none;">
+        Great job! You've scored 102WPM (408CPM) on this attempt.
+        <button type="button" class="close py-2" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="jumbotron rounded-0">
         <img src="static/img/icon.png" class="float-left">
         <div class="d-flex">
