Fixed 'First Error' Bug

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="alert alert-success alert-dismissible fade show rounded-0 m-0" id="finished-alert" role="alert" style="display: none;">
-        Great job! You've scored <span id="wpm-banner">0</span>WPM (<span id="cpm-banner">0</span>CPM), typing <span id="accuracy-banner">0.0</span>
+        Great job! You've scored <span id="wpm-banner">0</span>WPM (<span id="cpm-banner">0</span>CPM), typing <span id="accuracy-banner">100.00%</span>
         of the words correctly on this attempt.
         <button type="button" class="close py-2" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -68,7 +68,7 @@
                     <div class="card-body ">
                         <h5 class="card-title">Accuracy</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Correctly Typed Word Ratio</h6>
-                        <h3 class="card-text" id="accuracy">0.0%</h3>
+                        <h3 class="card-text" id="accuracy">100.00%</h3>
                     </div>
                 </div>
                 <div class="card text-right rounded-0" id="stats3">
