--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="alert alert-success alert-dismissible fade show rounded-0 m-0" id="finished-alert" role="alert" style="display: none;">
         Great job! You've scored <span id="wpm-banner">0</span>WPM (<span id="cpm-banner">0</span>CPM), typing <span id="accuracy-banner">100.00%</span>
-        of the words correctly on this attempt.
+        of the characters correctly on this attempt.
         <button type="button" class="close py-2" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -109,10 +109,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
 
-
-    <script src="static/js/ui.js"></script>
-    <script src="static/js/dict.js"></script>
-    <script src="static/js/typing_test.js"></script>
+    <script type="module" src="static/js/typing_test.js"></script>
 
 </body>
 
